--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
         </div>
         <div class = "container">
             <div class = "result-container">
+                  <div id="info">
+                    <h1 id="titulo">¡Bienvenidos a Macaroni<span>Cheese</span>!</h1>
+                    <p id="nosotros">Somos un grupo de jovenes independientes con un gran amor al cine. <br> 
+                        De esta forma, buscamos compartir este gusto con el mundo, por lo que con un arduo esfuerzo, <br>
+                    hicimos esta pagina para que puedas buscar tus peliculas de interes, con la opción de calificarlas <br>
+                     y darles una reseña. ¡Esperemos que les sea de más ayuda para sumergirse más en este mundo!</p>
+                </div>
                 <div class = "result-grid" id = "result-grid">
                    
                 </div>
